fix(home-page): add margin-top to Show More button for better spacing on mobile

--- a/css/Home-page.css
+++ b/css/Home-page.css
@@ -112,6 +112,11 @@
   font-weight: bold;
   cursor: pointer;
 }
+@media (max-width:576px){
+  .showmore{
+    margin-top: 30px;
+  }
+}
 
 /* Photo Section */
 .photo-section {
